samples/_failures_safe/1761457281_4625bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14d55c35.c:153:1: error: expected identifier or ‘(’ at end of input
  153 | int
      | ^~~
